tooling/nargo_cli/tests/snapshots/compile_failure/arithmetic_generics_intermediate_underflow/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: `0 - 1` in the arithmetic generics here would overflow the bounds of a(n) `u32`
   ┌─ src/main.nr:13:5
   │
13 │     push_zero(pop(array))
   │     ---------
   │

Aborting due to 1 previous error
